--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,18 @@
 @tailwind utilities; */
 
 :root {
-  --background: #ffffff;
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
+html[data-theme="light"] {
+  --background: #e6e6e6;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html[data-theme="dark"] {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
